LU-4007 libcfs: fix for removing lcw at lcw_dispatch_main

lcw_dispatch_main() creates zombies list and moves lcw into it.
But removes entry from another list in the zombies loop.

Signed-off-by: Alexander Boyko <alexander_boyko@xyratex.com>
Xyratex-bug-id: MRP-1179
Change-Id: I9daec3d9b3dbbf244a28b829cd724c8ec60c4b6c
Reviewed-on: http://review.whamcloud.com/7755
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Tested-by: Jenkins
Reviewed-by: Doug Oucharek <doug.s.oucharek@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Liang Zhen <liang.zhen@intel.com>
Reviewed-by: Isaac Huang <he.huang@intel.com>